@@ -51,7 +51,6 @@
 
   (define-structure-alias tabgroup sawfish.wm.tabs.tabgroup)
 
-  (define current-win nil)
   (define all-wins nil)
   (define oldgroup nil)
   (define tab-groups nil)
@@ -279,7 +278,8 @@ sticky, unsticky, fixed-position."
           ;; tabgroup to tabgroup
           (when (window-tabbed-p w)
             (setq release-window nil)
-            (tab-delete-window-from-tab-groups w))
+            (tab-delete-window-from-tab-groups w)
+            (setq index2 (tab-window-group-index w)))
           (if (window-get win 'iconified) (uniconify-window win))
           (let ((group-frame-to-workspaces (car (window-workspaces win))))
             (if (window-get win 'shaded) (unshade-window win))
@@ -361,51 +361,39 @@ sticky, unsticky, fixed-position."
              (lambda (w) (eq w win))
              (tab-group-window-list (tab-find-window win)))) )
 
-  (define (tab-group-raise win)
-    (if (window-tabbed-p win)
-        (tab-refresh-group win 'raise)))
-
-  (define (tab-group-sticky win)
-    (if (window-get win 'sticky)
-        (tab-refresh-group win 'sticky)
-      (tab-refresh-group win 'unsticky)))
-
   (define (before-move-resize win)
     "Releas win from the tabgroup and iconify the rest from the group."
     (when (not (window-get win 'fixed-position))
-      (when (eq all-wins nil)
-        (let* ((index (tab-window-group-index win))
-               (wins (tab-group-window-list (nth index tab-groups)))
-               (tabs (remove win (tab-group-window-list (nth index tab-groups))))
-               (default-window-animator 'none))
-          (tab-delete-window-from-group win index)
-          (reframe-window win)
-          (setq tab-refresh-lock nil)
-          (mapcar (lambda (w)
-                    (when (window-get w 'never-iconify)
-                      (window-put w 'never-iconify nil)
-                      (window-put w 'never-iconify-opaque t))
-                    (iconify-window w)) tabs)
-          (setq all-wins wins)
-          (setq current-win win))
-        (setq tab-refresh-lock t))))
+      (let* ((default-window-animator 'none)
+             (index (tab-window-group-index win))
+             (wins (tab-group-window-list (nth index tab-groups)))
+             (tabs (remove win (tab-group-window-list (nth index tab-groups)))))
+        (tab-delete-window-from-group win index)
+        (reframe-window win)
+        (setq tab-refresh-lock nil)
+        (mapcar (lambda (w)
+                  (when (window-get w 'never-iconify)
+                    (window-put w 'never-iconify nil)
+                    (window-put w 'never-iconify-opaque t))
+                  (iconify-window w)) tabs)
+        (setq all-wins wins))
+      (setq tab-refresh-lock t)))
 
   (define (after-move-resize win)
     "Add all tabs to the tabgroup from win. (Releas and iconify by before-move-resize)"
     (setq tab-refresh-lock nil)
-    (let* ((wins all-wins)
-	   (default-window-animator 'none)
+    (let* ((default-window-animator 'none)
+           (wins all-wins)
            (pos (window-position win))
            (dim (window-dimensions win))
            index index-old)
-      (when (and (cdr wins)
-                 (eq win current-win))
+      (when (cdr wins)
         (setq index (tab-window-group-index (car wins)))
         (mapcar (lambda (w)
-                  (when (not (eq index (tab-window-group-index w)))
-                    (setq index-old (tab-window-group-index w))
-                    (tab-put-window-in-group w index)
-                    (tab-delete-window-from-group w index-old))
+                  (setq index-old (tab-window-group-index w))
+                  (tab-put-window-in-group w index)
+                  (tab-delete-window-from-group w index-old)
+                  (setq index (tab-window-group-index w))
                   (move-window-to w (car pos) (cdr pos))
                   (resize-window-to w (car dim) (cdr dim))
                   (uniconify-window w)
@@ -414,8 +402,7 @@ sticky, unsticky, fixed-position."
                     (window-put w 'never-iconify t))
                   (window-put w 'tabbed t)) wins)
         (raise-window win)
-        (setq all-wins nil)
-        (setq current-win nil))
+        (setq all-wins nil))
       (setq tab-refresh-lock t)
       (when (window-tabbed-p win)
         (tab-refresh-group win 'move)
@@ -445,6 +432,11 @@ of the windows the same 'tab-group property"
     (when (window-get win 'tab-group)
       (setq in-tab-group-name (remove (assoc last-unmap-id in-tab-group-name) in-tab-group-name))))
 
+  (define (tab-group-sticky win)
+    (if (window-get win 'sticky)
+        (tab-refresh-group win 'sticky)
+      (tab-refresh-group win 'unsticky)))
+
   (unless batch-mode
     (add-hook 'after-add-window-hook in-tab-group)
     (add-hook 'unmap-notify-hook unmap-id)
@@ -469,13 +461,13 @@ of the windows the same 'tab-group property"
                          (tab-refresh-group win 'depth)
                          (tab-refresh-group win 'frame))))))
 
-    (add-hook 'focus-in-hook (lambda (win) (tab-group-raise win)))
     (when (eq move-outline-mode 'opaque)
       (add-hook 'before-move-hook (lambda (win) (if (window-tabbed-p win) (before-move-resize win)))))
     (add-hook 'after-move-hook  (lambda (win) (after-move-resize win)))
     (when (eq resize-outline-mode 'opaque)
       (add-hook 'before-resize-hook (lambda (win) (if (window-tabbed-p win) (before-move-resize win)))))
     (add-hook 'after-resize-hook  (lambda (win) (after-move-resize win)))
+    (add-hook 'focus-in-hook (lambda (win) (if (window-tabbed-p win) (tab-refresh-group win 'raise))))
     (add-hook 'shade-window-hook (lambda (win) (if (window-tabbed-p win) (tab-refresh-group win 'shade))))
     (add-hook 'unshade-window-hook (lambda (win) (if (window-tabbed-p win) (tab-refresh-group win 'unshade))))
     (add-hook 'iconify-window-hook (lambda (win) (if (window-tabbed-p win) (tab-refresh-group win 'iconify))))
@@ -485,5 +477,4 @@ of the windows the same 'tab-group property"
     (add-hook 'add-to-workspace-hook (lambda (win) (if (window-tabbed-p win) (tab-refresh-group win 'frame))))
     (add-hook 'destroy-notify-hook tab-delete-window-from-tab-groups))
 
-  (gaol-add tab-refresh-group tab-group-window-index)
-  )
+  (gaol-add tab-refresh-group tab-group-window-index))
