@@ -5,6 +5,9 @@
 	* lisp/sawfish/wm/keymaps.jl: bind tabgroup-add-to-group to
 	'C-Button2-Off' in titlebar/tabbar-keymap. [fuchur]
 
+	* lisp/sawfish/wm/tabs/tabgroup.jl: various bugfixes in raising,
+	stickying, move-resizeing and tab-index. [fuchur]
+
 	* man/news.texi: update
 
 2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
